--- a/inicio.html
+++ b/inicio.html
@@ -38,19 +38,31 @@
 
             <div class="dashboard-grid">
                 <a href="index.html" class="card">
-                    <h2>📝 Registrar</h2>
+                    <h2>
+                        <span class="icon icon--sm icon-nav-registrar" aria-hidden="true"></span>
+                        <span class="button-label">Registrar</span>
+                    </h2>
                     <p>Registrar un nuevo visitante en el sistema.</p>
                 </a>
                 <a href="descartes.html" class="card">
-                    <h2>🗑️ Descartar</h2>
+                    <h2>
+                        <span class="icon icon--sm icon-nav-descartes" aria-hidden="true"></span>
+                        <span class="button-label">Descartar</span>
+                    </h2>
                     <p>Registrar descartes de equipos.</p>
                 </a>
                 <a href="consultar.html" class="card">
-                    <h2>📊 Consultar</h2>
+                    <h2>
+                        <span class="icon icon--sm icon-nav-consultar" aria-hidden="true"></span>
+                        <span class="button-label">Consultar</span>
+                    </h2>
                     <p>Buscar, editar y ver todos los registros.</p>
                 </a>
                 <a href="inventario.html" class="card">
-                    <h2>🖧 Inventario de IPs</h2>
+                    <h2>
+                        <span class="icon icon--sm icon-nav-inventario" aria-hidden="true"></span>
+                        <span class="button-label">Inventario de IPs</span>
+                    </h2>
                     <p>Administración de direcciones IPs.</p>
                 </a>
             </div>
