--- a/consultar.html
+++ b/consultar.html
@@ -33,8 +33,14 @@
 
       <!-- Pestañas -->
       <div class="tabs-nav">
-        <button class="tab-btn active" data-tab="visitantes">📝 Registros de Visitantes</button>
-        <button class="tab-btn" data-tab="descartes">🗑️ Sesiones de Descartes</button>
+        <button class="tab-btn active" data-tab="visitantes">
+          <span class="icon icon--sm icon-nav-registrar" aria-hidden="true"></span>
+          <span class="button-label">Registros de Visitantes</span>
+        </button>
+        <button class="tab-btn" data-tab="descartes">
+          <span class="icon icon--sm icon-nav-descartes" aria-hidden="true"></span>
+          <span class="button-label">Sesiones de Descartes</span>
+        </button>
       </div>
 
       <!-- Tab: Visitantes -->
@@ -50,7 +56,10 @@
             <span class="date-placeholder" aria-hidden="true">dd/mm/aaaa</span>
           </div>
           <span id="visitantes-total" class="count-pill" aria-live="polite">0 registros</span>
-          <button id="export-visitantes-btn" class="btn-export">Exportar Excel</button>
+          <button id="export-visitantes-btn" class="btn-export button-with-icon">
+            <span class="icon icon--sm icon-export" aria-hidden="true"></span>
+            <span class="button-label">Exportar Excel</span>
+          </button>
         </div>
 
         <div class="table-container">
@@ -86,7 +95,10 @@
               <span class="date-placeholder" aria-hidden="true">dd/mm/aaaa</span>
             </div>
             <span id="sesiones-total" class="count-pill" aria-live="polite">0 sesiones</span>
-            <button id="export-descartes-btn" class="btn-export">Exportar Excel</button>
+            <button id="export-descartes-btn" class="btn-export button-with-icon">
+              <span class="icon icon--sm icon-export" aria-hidden="true"></span>
+              <span class="button-label">Exportar Excel</span>
+            </button>
           </div>
 
           <div class="table-container">
@@ -111,7 +123,10 @@
         <section id="sesion-detalle" style="display:none;">
           <div class="detalle-header">
             <!-- Botón de volver: en móvil se verá más compacto -->
-            <button id="btn-volver-sesiones" class="btn-secondary btn-volver" type="button">← Volver a Sesiones</button>
+            <button id="btn-volver-sesiones" class="btn-secondary btn-volver button-with-icon" type="button">
+              <span class="icon icon--sm icon-arrow-left" aria-hidden="true"></span>
+              <span class="button-label">Volver a Sesiones</span>
+            </button>
             <h2 id="detalle-titulo">Sesión</h2>
             <span class="detalle-unidad"><strong>Unidad:</strong> <span id="detalle-unidad">—</span></span>
 
@@ -119,8 +134,9 @@
             <div id="detalle-observacion" class="detalle-observacion"></div>
 
             <!-- Botón toggle SOLO para móvil -->
-            <button id="btn-toggle-detalles" class="btn-secondary btn-toggle" type="button">
-              Ver más detalles ▼
+            <button id="btn-toggle-detalles" class="btn-secondary btn-toggle button-with-icon" type="button" data-expanded="false">
+              <span class="icon icon--sm icon-arrow-down" aria-hidden="true"></span>
+              <span class="button-label">Ver más detalles</span>
             </button>
 
             <!-- Bloque de detalles extra -->
@@ -138,7 +154,10 @@
               placeholder="Buscar por descripción, marca, modelo, serie o marbete..." />
             <span id="equipos-total" class="count-pill" aria-live="polite">0 equipos</span>
             <!-- Botón Añadir Equipo se adapta a móvil -->
-            <button id="btn-agregar-equipo" class="btn-principal btn-anadir-equipo" type="button">Añadir Equipo</button>
+            <button id="btn-agregar-equipo" class="btn-principal btn-anadir-equipo button-with-icon" type="button">
+              <span class="icon icon--sm icon-plus" aria-hidden="true"></span>
+              <span class="button-label">Añadir Equipo</span>
+            </button>
           </div>
 
           <div class="table-container">
@@ -170,8 +189,14 @@
       <h2 id="confirm-title">¿Estás seguro?</h2>
       <p id="confirm-message">Esta acción no se puede deshacer.</p>
       <div class="modal-buttons">
-        <button id="btn-confirmar-cancelar" class="btn-secondary">Cancelar</button>
-        <button id="btn-confirmar-aceptar" class="btn-danger">Aceptar</button>
+        <button id="btn-confirmar-cancelar" class="btn-secondary button-with-icon">
+          <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+          <span class="button-label">Cancelar</span>
+        </button>
+        <button id="btn-confirmar-aceptar" class="btn-danger button-with-icon">
+          <span class="icon icon--sm icon-check" aria-hidden="true"></span>
+          <span class="button-label">Aceptar</span>
+        </button>
       </div>
     </div>
   </div>
@@ -179,7 +204,9 @@
   <!-- Modal: Editar visitante -->
   <div id="modal-editar-visitante" class="modal-overlay">
     <div class="modal-content">
-      <button class="modal-close-btn">&times;</button>
+      <button class="modal-close-btn" type="button" aria-label="Cerrar modal">
+        <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+      </button>
       <h2>Editar Visitante</h2>
 
       <div class="modal-form-container">
@@ -204,8 +231,14 @@
           <input type="text" id="edit-motivo" required />
 
           <div class="modal-buttons">
-            <button type="button" class="btn-secondary modal-cancel-btn">Cancelar</button>
-            <button type="submit" class="btn-principal">Guardar Cambios</button>
+            <button type="button" class="btn-secondary modal-cancel-btn button-with-icon">
+              <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+              <span class="button-label">Cancelar</span>
+            </button>
+            <button type="submit" class="btn-principal button-with-icon">
+              <span class="icon icon--sm icon-save" aria-hidden="true"></span>
+              <span class="button-label">Guardar Cambios</span>
+            </button>
           </div>
         </form>
       </div>
@@ -215,7 +248,9 @@
   <!-- Modal: Editar equipo (para detalle de sesión) -->
   <div id="modal-editar-equipo" class="modal-overlay">
     <div class="modal-content">
-      <button id="btn-cerrar-modal-editar-equipo" class="modal-close-btn">&times;</button>
+      <button id="btn-cerrar-modal-editar-equipo" class="modal-close-btn" type="button" aria-label="Cerrar modal">
+        <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+      </button>
       <h2>Editar Equipo</h2>
       <div class="modal-form-container">
         <form id="form-editar-equipo" novalidate>
@@ -250,8 +285,14 @@
             <input type="text" id="editq-motivo" />
           </div>
           <div class="modal-buttons">
-            <button type="button" id="btn-editar-equipo-cancelar" class="btn-secondary">Cancelar</button>
-            <button type="submit" class="btn-principal">Aplicar Cambios</button>
+            <button type="button" id="btn-editar-equipo-cancelar" class="btn-secondary button-with-icon">
+              <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+              <span class="button-label">Cancelar</span>
+            </button>
+            <button type="submit" class="btn-principal button-with-icon">
+              <span class="icon icon--sm icon-save" aria-hidden="true"></span>
+              <span class="button-label">Aplicar Cambios</span>
+            </button>
           </div>
         </form>
       </div>
@@ -261,7 +302,9 @@
   <!-- Modal: Agregar equipo (nuevo) -->
   <div id="modal-agregar-equipo" class="modal-overlay">
     <div class="modal-content">
-      <button id="btn-cerrar-modal-agregar-equipo" class="modal-close-btn">&times;</button>
+      <button id="btn-cerrar-modal-agregar-equipo" class="modal-close-btn" type="button" aria-label="Cerrar modal">
+        <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+      </button>
       <h2>Agregar Equipo</h2>
       <div class="modal-form-container">
         <form id="form-agregar-equipo" novalidate>
@@ -296,8 +339,14 @@
             <input type="text" id="add-motivo" />
           </div>
           <div class="modal-buttons">
-            <button type="button" id="btn-agregar-equipo-cancelar" class="btn-secondary">Cancelar</button>
-            <button type="submit" class="btn-principal">Añadir</button>
+            <button type="button" id="btn-agregar-equipo-cancelar" class="btn-secondary button-with-icon">
+              <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+              <span class="button-label">Cancelar</span>
+            </button>
+            <button type="submit" class="btn-principal button-with-icon">
+              <span class="icon icon--sm icon-plus" aria-hidden="true"></span>
+              <span class="button-label">Añadir</span>
+            </button>
           </div>
         </form>
       </div>
@@ -307,7 +356,9 @@
   <!-- Modal: Editar sesión de descarte -->
   <div id="modal-editar-sesion" class="modal-overlay">
     <div class="modal-content">
-      <button id="btn-cerrar-modal-editar-sesion" class="modal-close-btn">&times;</button>
+      <button id="btn-cerrar-modal-editar-sesion" class="modal-close-btn" type="button" aria-label="Cerrar modal">
+        <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+      </button>
       <h2>Editar Sesión</h2>
       <div class="modal-form-container">
         <form id="form-editar-sesion" novalidate>
@@ -334,8 +385,14 @@
             <textarea id="edit-sesion-observacion" rows="3"></textarea>
           </div>
           <div class="modal-buttons">
-            <button type="button" id="btn-editar-sesion-cancelar" class="btn-secondary modal-cancel-btn">Cancelar</button>
-            <button type="submit" class="btn-principal">Guardar Cambios</button>
+            <button type="button" id="btn-editar-sesion-cancelar" class="btn-secondary modal-cancel-btn button-with-icon">
+              <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
+              <span class="button-label">Cancelar</span>
+            </button>
+            <button type="submit" class="btn-principal button-with-icon">
+              <span class="icon icon--sm icon-save" aria-hidden="true"></span>
+              <span class="button-label">Guardar Cambios</span>
+            </button>
           </div>
         </form>
       </div>
