--- a/descartes.html
+++ b/descartes.html
@@ -187,11 +187,23 @@
                         </div>
                         <div class="form-group">
                             <label for="edit-marbete">Marbete:</label>
-                            <input type="text" id="edit-marbete">
+                            <div class="input-with-button">
+                                <input type="text" id="edit-marbete">
+                                <button type="button" class="btn-scan button-with-icon" data-target-input="edit-marbete">
+                                    <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
+                                    <span class="sr-only">Escanear marbete</span>
+                                </button>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="edit-serie">Serie:</label>
-                            <input type="text" id="edit-serie">
+                            <div class="input-with-button">
+                                <input type="text" id="edit-serie">
+                                <button type="button" class="btn-scan button-with-icon" data-target-input="edit-serie">
+                                    <span class="icon icon--sm icon-scan" aria-hidden="true"></span>
+                                    <span class="sr-only">Escanear serie</span>
+                                </button>
+                            </div>
                         </div>
                         <div class="form-group">
                             <label for="edit-marca">Marca:</label>
