Corrige alineación e interacciones en la página de descartes

--- a/descartes.html
+++ b/descartes.html
@@ -227,7 +227,7 @@
                             <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
                             <span class="button-label">Cancelar</span>
                         </button>
-                        <button type="submit" class="btn-principal button-with-icon">
+                        <button type="submit" class="btn-principal button-with-icon" data-label-mobile="Aplicar">
                             <span class="icon icon--sm icon-save" aria-hidden="true"></span>
                             <span class="button-label">Aplicar Cambios</span>
                         </button>
