Ajustar estilo y comportamiento de modales

--- a/consultar.html
+++ b/consultar.html
@@ -286,7 +286,10 @@
             </button>
             <button type="submit" class="btn-principal button-with-icon">
               <span class="icon icon--sm icon-save" aria-hidden="true"></span>
-              <span class="button-label">Guardar Cambios</span>
+              <span class="button-label">
+                <span class="label-desktop">Guardar Cambios</span>
+                <span class="label-mobile">Aplicar</span>
+              </span>
             </button>
           </div>
         </form>
@@ -352,7 +355,10 @@
             </button>
             <button type="submit" class="btn-principal button-with-icon">
               <span class="icon icon--sm icon-save" aria-hidden="true"></span>
-              <span class="button-label">Aplicar Cambios</span>
+              <span class="button-label">
+                <span class="label-desktop">Aplicar Cambios</span>
+                <span class="label-mobile">Aplicar</span>
+              </span>
             </button>
           </div>
         </form>
@@ -464,7 +470,10 @@
             </button>
             <button type="submit" class="btn-principal button-with-icon">
               <span class="icon icon--sm icon-save" aria-hidden="true"></span>
-              <span class="button-label">Guardar Cambios</span>
+              <span class="button-label">
+                <span class="label-desktop">Guardar Cambios</span>
+                <span class="label-mobile">Aplicar</span>
+              </span>
             </button>
           </div>
         </form>
