--- a/descartes.html
+++ b/descartes.html
@@ -227,9 +227,12 @@
                             <span class="icon icon--sm icon-close-cancel" aria-hidden="true"></span>
                             <span class="button-label">Cancelar</span>
                         </button>
-                        <button type="submit" class="btn-principal button-with-icon" data-label-mobile="Aplicar">
+                        <button type="submit" class="btn-principal button-with-icon">
                             <span class="icon icon--sm icon-save" aria-hidden="true"></span>
-                            <span class="button-label">Aplicar Cambios</span>
+                            <span class="button-label">
+                                <span class="label-desktop">Aplicar Cambios</span>
+                                <span class="label-mobile">Aplicar</span>
+                            </span>
                         </button>
                     </div>
                 </form>
