Ajusta botones del modal de edición en descartes

--- a/descartes.html
+++ b/descartes.html
@@ -228,11 +228,8 @@
                             <span class="button-label">Cancelar</span>
                         </button>
                         <button type="submit" class="btn-principal button-with-icon">
-                            <span class="icon icon--sm icon-save" aria-hidden="true"></span>
-                            <span class="button-label">
-                                <span class="label-desktop">Aplicar Cambios</span>
-                                <span class="label-mobile">Aplicar</span>
-                            </span>
+                            <span class="icon icon--sm icon-check" aria-hidden="true"></span>
+                            <span class="button-label">Aplicar</span>
                         </button>
                     </div>
                 </form>
