Corrige selectores de fecha en consultar

--- a/consultar.html
+++ b/consultar.html
@@ -61,18 +61,18 @@
               <input type="search" id="search-visitantes" placeholder="Buscar por nombre, apellido o cédula..." />
             </div>
             <div class="filters-group" role="group" aria-label="Filtros de fecha">
-              <div class="date-field" data-empty="true">
+              <label class="date-field" data-empty="true">
                 <span class="date-display" aria-hidden="true">
                   <span class="date-display__text"></span>
                 </span>
                 <input type="date" id="date-start-visitantes" title="Fecha de inicio" aria-label="Fecha de inicio" />
-              </div>
-              <div class="date-field" data-empty="true">
+              </label>
+              <label class="date-field" data-empty="true">
                 <span class="date-display" aria-hidden="true">
                   <span class="date-display__text"></span>
                 </span>
                 <input type="date" id="date-end-visitantes" title="Fecha de fin" aria-label="Fecha de fin" />
-              </div>
+              </label>
             </div>
             <span id="visitantes-total" class="count-pill" aria-live="polite">0 registros</span>
             <button id="export-visitantes-btn" class="btn-export button-with-icon">
@@ -118,18 +118,18 @@
                 <input type="search" id="search-descartes" placeholder="Buscar por Unidad Administrativa o SIACE..." />
               </div>
               <div class="filters-group" role="group" aria-label="Filtros de fecha">
-                <div class="date-field" data-empty="true">
+                <label class="date-field" data-empty="true">
                   <span class="date-display" aria-hidden="true">
                     <span class="date-display__text"></span>
                   </span>
                   <input type="date" id="date-start-descartes" title="Fecha de inicio" aria-label="Fecha de inicio" />
-                </div>
-                <div class="date-field" data-empty="true">
+                </label>
+                <label class="date-field" data-empty="true">
                   <span class="date-display" aria-hidden="true">
                     <span class="date-display__text"></span>
                   </span>
                   <input type="date" id="date-end-descartes" title="Fecha de fin" aria-label="Fecha de fin" />
-                </div>
+                </label>
               </div>
               <span id="sesiones-total" class="count-pill" aria-live="polite">0 sesiones</span>
               <button id="export-descartes-btn" class="btn-export button-with-icon">
