Alinea controles y simplifica acciones con iconos

--- a/consultar.html
+++ b/consultar.html
@@ -75,11 +75,11 @@
               </label>
             </div>
             <span id="visitantes-total" class="count-pill" aria-live="polite">0 registros</span>
-            <button id="export-visitantes-btn" class="btn-export button-with-icon">
+            <button id="export-visitantes-btn" class="btn-export button-with-icon" aria-label="Exportar registros de visitantes">
               <span class="icon icon--sm icon-export" aria-hidden="true"></span>
               <span class="button-label">Exportar Excel</span>
             </button>
-            <button id="clear-visitantes-filters" class="btn-secondary button-with-icon btn-clear-filters" type="button" hidden>
+            <button id="clear-visitantes-filters" class="btn-secondary button-with-icon btn-clear-filters" type="button" hidden aria-label="Limpiar filtros de visitantes">
               <span class="icon icon--sm icon-broom" aria-hidden="true"></span>
               <span class="button-label">Limpiar filtros</span>
             </button>
@@ -132,11 +132,11 @@
                 </label>
               </div>
               <span id="sesiones-total" class="count-pill" aria-live="polite">0 sesiones</span>
-              <button id="export-descartes-btn" class="btn-export button-with-icon">
+              <button id="export-descartes-btn" class="btn-export button-with-icon" aria-label="Exportar sesiones de descartes">
                 <span class="icon icon--sm icon-export" aria-hidden="true"></span>
                 <span class="button-label">Exportar Excel</span>
               </button>
-              <button id="clear-descartes-filters" class="btn-secondary button-with-icon btn-clear-filters" type="button" hidden>
+              <button id="clear-descartes-filters" class="btn-secondary button-with-icon btn-clear-filters" type="button" hidden aria-label="Limpiar filtros de descartes">
                 <span class="icon icon--sm icon-broom" aria-hidden="true"></span>
                 <span class="button-label">Limpiar filtros</span>
               </button>
