Update departamento dropdown in inventory modal

--- a/inventario.html
+++ b/inventario.html
@@ -197,15 +197,9 @@
             </div>
             <div class="form-group">
               <label for="input-departamento">Departamento</label>
-              <input
-                id="input-departamento"
-                name="departamento"
-                type="text"
-                placeholder="Departamento"
-                list="departamento-options"
-                autocomplete="off"
-              />
-              <datalist id="departamento-options"></datalist>
+              <select id="input-departamento" name="departamento">
+                <option value="">Selecciona un departamento</option>
+              </select>
               <input
                 id="input-departamento-custom"
                 class="departamento-custom-input"
